deploy/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-app
  template:
    metadata:
      labels:
        app: movie-app
    spec:
      containers:
      - name: movie-app-container
        image: movie-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: dockerhub-secret
